add wrapper with exceptions